ログイン中のみコンテンツ一覧画面を開けるよう修正

--- a/public/style.css
+++ b/public/style.css
@@ -125,7 +125,7 @@ body {
 
 .social-btn[disabled] {
   opacity: 0.5;
-  cursor: not-allowed;
+  pointer-events: none;
 }
 
 .social-btn[disabled]:hover {
