CSSディレクトリ構成見直し＆デザイン見直し

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,4 +1,8 @@
-@use 'base';
-@use 'form';
-@use 'login';
-@use 'cms';
+@use './app/settings';
+
+@use './core/global';
+@use './core/components/form';
+@use './core/components/header';
+
+@use './app/views/auth';
+@use './app/views/cms';
