--- a/public/css/app/views/_cms.scss
+++ b/public/css/app/views/_cms.scss
@@ -1,9 +1,7 @@
 .cms-main {
   width: 800px;
-  margin: 40px auto;
+  margin: 0 auto;
   background: rgba(255, 255, 255, 0.97);
-  border-radius: 16px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
   padding: 32px;
 }
 
