--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,6 +2,7 @@
 
 @use './core/global';
 @use './core/components/form';
+@use './core/components/pagination';
 @use './core/components/header';
 
 @use './app/views/auth';
