--- a/public/css/core/components/_form.scss
+++ b/public/css/core/components/_form.scss
@@ -2,12 +2,12 @@
 @use '../global';
 
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .form-group input {
   width: 100%;
-  padding: 15px;
+  padding: 1rem;
   border: 2px solid #e1e5e9;
   border-radius: 10px;
   font-size: 1rem;
@@ -25,13 +25,13 @@
 .submit-btn {
   @extend .btn;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .divider {
   height: 1px;
   background: #e1e5e9;
-  margin: 25px 0;
+  margin: 1rem 0;
 }
 
 .error-message {
