--- a/public/css/core/components/_pagination.scss
+++ b/public/css/core/components/_pagination.scss
@@ -6,7 +6,7 @@
   font-weight: normal;
   background-color: settings.$itemBackgroundColor;
   color: black;
-  margin-right: 16px;
+  margin-right: 1rem;
   text-decoration: none;
   height: 100%;
 
